UI Changes, fixed pledge section min-width and button alignment in responsive layouts, changed news page formatting

--- a/sustainabilityPledge/src/app/news/news.component.css
+++ b/sustainabilityPledge/src/app/news/news.component.css
@@ -11,3 +11,13 @@
     flex-direction: row;
     justify-content: center;
 }
+@media only screen and (max-width: 1100px) {
+    .newsflex{
+        display: flex;
+        position: relative;
+        margin: auto;
+        flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+    }
+}
